# sdk-internal

./: package-lock.json  package.json
.github/workflows/: build-android.yml  build-swift.yml  build-wasm-internal.yml  detect-breaking-changes.yml  lint.yml  rustdoc.yml
crates/bitwarden-api-api/: README.md
crates/bitwarden-api-api/.openapi-generator/: FILES
crates/bitwarden-api-api/src/apis/: mod.rs  organization_invite_links_api.rs  organization_users_api.rs  stripe_api.rs
crates/bitwarden-api-api/src/models/: create_organization_invite_link_request_model.rs  mod.rs  organization_license.rs  organization_response_model.rs  organization_subscription_response_model.rs  organization_user.rs  organization_user_user_details_response_model.rs  plan_response_model.rs  profile_organization_response_model.rs  profile_provider_organization_response_model.rs  revocation_reason.rs  sync_response_model.rs
crates/bitwarden-api-identity/: README.md
crates/bitwarden-core/src/client/: encryption_settings.rs
crates/bitwarden-core/src/key_management/: crypto.rs  local_user_data_key.rs  local_user_data_key_state.rs
crates/bitwarden-crypto/src/keys/: symmetric_crypto_key.rs
crates/bitwarden-generators/src/: passphrase.rs
crates/bitwarden-pm/src/: lib.rs
crates/bitwarden-server-communication-config/: CLAUDE.md
crates/bitwarden-server-communication-config/src/: client.rs  platform_api.rs  repository.rs
crates/bitwarden-shared-unlock/: Cargo.toml
crates/bitwarden-shared-unlock/src/: drivers.rs  follower.rs  leader.rs  lib.rs  message.rs  tests.rs
crates/bitwarden-shared-unlock/src/wasm/: drivers.rs  follower.rs  leader.rs  mod.rs
crates/bitwarden-state-bridge-macro/src/: lib.rs
crates/bitwarden-test/src/play/: error.rs  http_client.rs  play.rs
crates/bitwarden-uniffi/src/: error.rs
crates/bitwarden-user-crypto-management/src/key_rotation/: password_change_and_rotate_user_keys.rs  rotate_user_keys.rs  sync.rs
crates/bitwarden-wasm-internal/: Cargo.toml
crates/bitwarden-wasm-internal/src/: lib.rs
crates/bw/src/: client_state.rs  main.rs
crates/bw/src/command/: mod.rs
crates/bw/src/platform/: completion.rs  config.rs  encode.rs  mod.rs  sync.rs
support/lints/error_enum/: Cargo.toml
support/lints/error_enum/src/: lib.rs
support/lints/error_enum/ui/: main.rs  main.stderr
support/lints/error_suffix/src/: lib.rs
support/lints/error_suffix/ui/: main.stderr
