[package]
name = "bitwarden-wasm-internal"
version = "0.1.0"
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
bitwarden-license = ["bitwarden-pm/bitwarden-license", "dep:bitwarden-commercial-vault"]
# WARNING: This feature is for debugging purposes only and should never be enabled in production.
# It disables compile-time debug prevention for cryptographic keys, exposing sensitive key material
# in debug output, and adds tracing debug logs to encrypt/decrypt operations.
dangerous-crypto-debug = ["bitwarden-core/dangerous-crypto-debug"]
# WARNING: There are a lot of traces emitted to give context for operations. This is quite slow and may slow down decryption
# and other bulk data operations, and should only be enabled for debugging purposes.
performance-tracing = []

[dependencies]
async-trait = { workspace = true }
bitwarden-commercial-vault = { workspace = true, optional = true, features = [
  "wasm",
] }
bitwarden-core = { workspace = true, features = ["wasm", "internal"] }
bitwarden-crypto = { workspace = true, features = ["wasm"] }
bitwarden-error = { workspace = true }
bitwarden-ipc = { workspace = true, features = ["wasm"] }
bitwarden-logging = { workspace = true, features = ["wasm"] }
bitwarden-pm = { workspace = true, features = ["wasm"] }
bitwarden-policies = { workspace = true, features = ["wasm"] }
bitwarden-server-communication-config = { workspace = true, features = ["wasm"] }
bitwarden-shared-unlock = { workspace = true, features = ["wasm"] }
bitwarden-ssh = { workspace = true, features = ["wasm"] }
bitwarden-state = { workspace = true, features = ["wasm"] }
bitwarden-threading = { workspace = true }
bitwarden-user-crypto-management = { workspace = true, features = ["wasm"] }
bitwarden-vault = { workspace = true, features = ["wasm"] }
console_error_panic_hook = "0.1.7"
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
sha1 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = { version = "0.1.3" }
tsify = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[lints]
workspace = true
